--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -8,7 +8,7 @@
     <a routerLink="/" class="logo">CoolApp</a>
     <nav>
       <ul>
-        <li><a href="#" routerLink="/">Home</a></li>
+        <li><a href="#" routerLink="/">Home sweet home</a></li>
         <li><a href="#" routerLink="/market">List</a></li>
       </ul>
     </nav>
