--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -4,12 +4,14 @@
 </div> -->
 
 <header>
-  <div class="container">
-    <a routerLink="/" class="logo">CoolApp</a>
+  <div class="navbar">
+    <a routerLink="/" class="logo">Ivanti MarketPlace</a>
     <nav>
       <ul>
-        <li><a href="#" routerLink="/">Home sweet home</a></li>
+        <li><a href="#" routerLink="/">Home</a></li>
         <li><a href="#" routerLink="/market">List</a></li>
+        <li><a href="#" routerLink="/register">Register</a></li>
+        <li><a href="#" routerLink="/login">Login</a></li>
       </ul>
     </nav>
   </div>
