--- a/client/src/app/footer/footer.component.html
+++ b/client/src/app/footer/footer.component.html
@@ -1,9 +1,9 @@
 <footer id="footer">
   <div id="containerFooter">
     <div class="social">
-      <a href="https://www.facebook.com" target = "_blank"><ion-icon name="logo-facebook"></ion-icon></a>
-      <a href="https://www.twitter.com" target = "_blank"><ion-icon name="logo-twitter"></ion-icon></a>
-      <a href="https://www.gmail.com" target = "_blank"><ion-icon name="mail"></ion-icon></a>
+      <a href="https://www.facebook.com" target = "_blank"><!--<ion-icon name="logo-facebook"></ion-icon>--></a>
+      <a href="https://www.twitter.com" target = "_blank"><!--<ion-icon name="logo-twitter"></ion-icon>--></a>
+      <a href="https://www.gmail.com" target = "_blank"><!--<ion-icon name="mail"></ion-icon>--></a>
     </div>
     <div class="txtFooter">
       <p>
