--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -14,18 +14,18 @@
       <div class="form-group">
         <label>Email</label>
         <input type="text" class="form-control" name="email" placeholder="email" /><!--[(ngModel)]="email.value"-->
-        <div [hidden]="!email.errors.required">
 
-        </div>
+
+
       </div>
     </div>
     <div class="col-md-12">
       <div class="form-group">
         <label>Password</label>
         <input type="password" class="form-control" name="password" placeholder="password"/> <!--[(ngModel)]="password.value"-->
-        <div [hidden]="!password.errors.required">
 
-        </div>
+
+
       </div>
     </div>
 
@@ -42,7 +42,7 @@
 
     <div class="col-md-12" style="margin-top:20px;">
       <div class="form-group">
-        <button [disabled]="loading" (click)="login()" class="btn btn-primary btn-block">Login</button>
+        <button class="btn btn-primary btn-block">Login</button>
       </div>
     </div>
 
