Fucking Shit commited !

--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -6,12 +6,12 @@
   </div>
 </div>-->
 
-<div class="container" style="margin-top:150px;position:absolute;">
+<div class="container" style="margin-top:150px;margin-left:250px;position:absolute;">
 
   <div class="col-md-6 col-md-offset-3">
 
     <div class="col-md-12">
-      <div class="form-group">
+      <div class="form-group" align="center">
         <label>Email</label>
         <input type="text" class="form-control" name="email" placeholder="email" /><!--[(ngModel)]="email.value"-->
 
@@ -20,7 +20,7 @@
       </div>
     </div>
     <div class="col-md-12">
-      <div class="form-group">
+      <div class="form-group" align="center">
         <label>Password</label>
         <input type="password" class="form-control" name="password" placeholder="password"/> <!--[(ngModel)]="password.value"-->
 
@@ -30,7 +30,7 @@
     </div>
 
     <div class="col-md-12">
-      <div class="form-group">
+      <div class="form-group" align="center">
         <div class="checkbox">
           <label>
             <input type="checkbox" value=""> <!--[(ngModel)]="rememberMe"-->
@@ -46,7 +46,7 @@
       </div>
     </div>
 
-    <div class="col-md-12">
+    <div class="col-md-12" align="center">
       <a href="forgot-pw">Forgot password ?</a>
     </div>
 
