--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top:150px">
+<div class="container" style="margin-top:100px;"align="center">
   <div class="pull-right">
     Already a member ?
   </div>
@@ -7,12 +7,12 @@
   </div>
 </div>
 
-<div class="container" style="margin-top:50px">
+<div class="container" style="margin-top:50px;margin-left:300px">
 
   <div class="col-md-6 col-md-offset-3">
 
     <div class="col-md-12">
-      <div class="form-group">
+      <div class="form-group" align="center">
         <label>You are</label>
         <div class="radio">
           <label>
@@ -80,7 +80,7 @@
       </div>
     </div>
 
-    <div class="col-md-12" style="margin-top:20px;text-align:justify">
+    <div class="col-md-12" style="margin-top:20px;text-align:center">
       By registering by e-mail, you accept the General Conditions and the Privacy Policy.
 
       The above information is all required to become a member.
