Added searchbar front-end, regex search back-end

--- a/client/src/app/market-place/market-place.component.html
+++ b/client/src/app/market-place/market-place.component.html
@@ -10,6 +10,7 @@
 
 <div>
 <h1 class="header2">Popular packages</h1>
+<input type="text" class="form-control" (input)="showSearch($event.target.value)">
 <div class="containerPP">
       <a class="card2" href="#">
         <h2>Ivanti Package</h2>
