Fucking Shit commited !

--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -12,8 +12,8 @@
 
     <div class="col-md-12">
       <div class="form-group" align="center">
-        <label>Email</label>
-        <input type="text" class="form-control" name="email" placeholder="email" /><!--[(ngModel)]="email.value"-->
+        <label><b>Email</b></label>
+        <input type="text" class="form-control" name="email" placeholder="Email address" /><!--[(ngModel)]="email.value"-->
 
 
 
@@ -21,8 +21,8 @@
     </div>
     <div class="col-md-12">
       <div class="form-group" align="center">
-        <label>Password</label>
-        <input type="password" class="form-control" name="password" placeholder="password"/> <!--[(ngModel)]="password.value"-->
+        <label><b>Password</b></label>
+        <input type="password" class="form-control" name="password" placeholder="Password"/> <!--[(ngModel)]="password.value"-->
 
 
 
