--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -6,11 +6,11 @@ $primary: rgb(111, 0, 255);
 
 html, body { height: 100%; }
 
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Oswald, "Oswald", sans-serif; }
 
 body {
     margin: 0;
-    font-family: 'Nunito', 'sans-serif';
+    font-family: 'Oswald', 'sans-serif';
     font-size: 18px;
 }
 
