--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top:100px;"align="center">
+<div class="container" style="margin-top:100px;" align="center">
   <div class="pull-right">
     Already a member ?
   </div>
@@ -13,7 +13,7 @@
 
     <div class="col-md-12">
       <div class="form-group" align="center">
-        <label>You are</label>
+        <label><b>Role</b></label>
         <div class="radio">
           <label>
             <input type="radio" name="genre" value="contentcreator" ><!--[(ngModel)]="role"-->
@@ -29,7 +29,7 @@
 
     <div class="col-md-6">
       <div class="form-group">
-        <label >First Name</label>
+        <label><b>First Name</b></label>
         <input type="text" class="form-control" name="firstname" placeholder="First name" /><!--[(ngModel)]="firstname.value"-->
         <!--<div [hidden]="!firstname.errors.required">
 
@@ -38,7 +38,7 @@
     </div>
     <div class="col-md-6">
       <div class="form-group">
-        <label >Last Name</label>
+        <label ><b>Last Name</b></label>
         <input type="text" class="form-control" name="lastname" placeholder="Last name" /><!--[(ngModel)]="lastname.value"-->
         <!--<div [hidden]="!lastname.errors.required">
 
@@ -47,7 +47,7 @@
     </div>
     <div class="col-md-12">
       <div class="form-group">
-        <label >Email</label>
+        <label ><b>Email</b></label>
         <input type="text" class="form-control" name="email" placeholder="Email" /><!--[(ngModel)]="email.value"-->
         <!--<div [hidden]="!email.errors.required">
 
@@ -56,7 +56,7 @@
     </div>
     <div class="col-md-12">
       <div class="form-group">
-        <label >Password</label>
+        <label ><b>Password</b></label>
         <input type="password" class="form-control" name="password" placeholder="Password" /><!--[(ngModel)]="password.value"-->
         <!--<div [hidden]="!password.errors.required">
 
@@ -65,7 +65,7 @@
     </div>
     <div class="col-md-12">
       <div class="form-group">
-        <label >Confirm Password</label>
+        <label ><b>Confirm Password</b></label>
         <input type="password" class="form-control" name="confirmpassword" placeholder="Confirm password" /><!--[(ngModel)]="confirmpassword.value"-->
         <!--<div [hidden]="!confirmpassword.errors.required">
 
