Fucking Shit commited !

--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -2,7 +2,7 @@
   <div class="pull-right">
     Already a member ?
   </div>
-  <!--<a [routerLink]="['/login']" class="btn btn-info" style="margin-left:0px">Sign In</a> -->
+  <a [routerLink]="['/login']" class="btn btn-info" style="margin-left:0px">Sign In</a>
   <div>
   </div>
 </div>
