Fucking Shit commited !

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -8,7 +8,7 @@
     <a routerLink="/" class="logo">Ivanti MarketPlace</a>
     <nav>
       <ul>
-        <li><a href="#" routerLink="/">Home</a></li>
+        <li><a href="#" routerLink="/"><b>Home</b></a></li>
         <li><a href="#" routerLink="/market">List</a></li>
         <li><a href="#" routerLink="/register">Register</a></li>
         <li><a href="#" routerLink="/login">Login</a></li>
