--- a/client/src/app/market-place/market-place.component.html
+++ b/client/src/app/market-place/market-place.component.html
@@ -10,7 +10,7 @@
 
 <div>
 <h1 class="header2">Popular packages</h1>
-<div class="containerPP">
+<div class="containerpp">
       <a class="card2" href="#">
         <h2>Ivanti Package</h2>
         <h3>OS 30</h3>
