--- a/client/src/app/market-place/market-place.component.scss
+++ b/client/src/app/market-place/market-place.component.scss
@@ -5,13 +5,18 @@
 }
 
 .container {
+    display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    max-width: 80%;
+    min-height: 300px;
+    background-color: #dbd5d4;
+    margin-bottom: 20px;
 
     .news {
-        max-width: 80%;
-        min-height: 300px;
-        background-color: #dbd5d4;
+ 
+        
 
         .text {
             text-align: center;
@@ -20,6 +25,18 @@
 
     }
 
+}
+
+.containerpp {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #ccc !important;
+    border-radius: 16px;
+    padding-top: 30px;
+    margin-top: 30px;
+    margin-bottom: 50px;
 }
 
 ul {
@@ -33,10 +50,10 @@ ul {
 
     li {
         padding: 1em;
-        margin-right: 10px;
         margin-bottom: 1em;
         display: flex;
         flex-direction: column;
+        min-width: 280px;
 
         p {
             margin: 0;
@@ -53,6 +70,7 @@ ul {
         }
     }
 }
+
 .card2 {
     display: block;
     top: 0px;
