--- a/client/src/app/market-place/market-place.component.html
+++ b/client/src/app/market-place/market-place.component.html
@@ -10,12 +10,9 @@
 
 <div>
 <h1 class="header2">Popular packages</h1>
-<<<<<<< HEAD
-<input type="text" class="form-control" (input)="showSearch($event.target.value)" placeholder="Search package...">
-<div class="containerPP">
-=======
+
 <div class="containerPP" align="center">
->>>>>>> 8c0ade42e700307b56e34ec0003c12fccc04f2b8
+
       <a class="card2" href="#">
         <h2>Ivanti Package</h2>
         <h3>OS 30</h3>
@@ -36,7 +33,19 @@
         <h3>OS 30</h3>
         <p class="small">Card description with lots of great facts and interesting details.</p>
       </a>
+      <input type="text" class="form-control" (input)="showSearch($event.target.value)" placeholder="Search package...">
+<div class="containerPP">
+  <ul *ngIf="packages">
+    <li *ngFor="let search of search">
+      <a class="card2" href="#">
+        <h2> {{search.title}} </h2>
+        <h3>OS 30</h3>
+        <p class="small">{{ search.description }}</p>
+      </a>
+    </li>
+  </ul>
 </div>
+
 </div>
 
     <ul *ngIf="packages">
