--- a/client/src/app/market-place/market-place.component.html
+++ b/client/src/app/market-place/market-place.component.html
@@ -11,7 +11,7 @@
 <div>
 <h1 class="header2">Popular packages</h1>
 
-<div class="containerPP" align="center">
+<div class="containerpp" allign="center">
 
       <a class="card2" href="#">
         <h2>Ivanti Package</h2>
@@ -33,6 +33,7 @@
         <h3>OS 30</h3>
         <p class="small">Card description with lots of great facts and interesting details.</p>
       </a>
+      </div>
       <input type="text" class="form-control" (input)="showSearch($event.target.value)" placeholder="Search package...">
 <div class="containerPP">
   <ul *ngIf="packages">
@@ -46,9 +47,7 @@
   </ul>
 </div>
 
-</div>
-
-    <ul *ngIf="packages">
+    <!-- <ul *ngIf="packages">
       <li *ngFor="let package of packages">
         <a class="card2" href="#">
           <h2> {{package.title}} </h2>
@@ -56,5 +55,5 @@
           <p class="small">{{ package.description }}</p>
         </a>
       </li>
-    </ul>
+    </ul> -->
 </div>
