--- a/client/src/app/market-place/market-place.component.scss
+++ b/client/src/app/market-place/market-place.component.scss
@@ -47,6 +47,7 @@ ul {
     border: 1px solid #ccc !important;
     border-radius: 16px;
     padding-top: 30px;
+    font-style: black;
 
     li {
         padding: 1em;
@@ -54,9 +55,11 @@ ul {
         display: flex;
         flex-direction: column;
         min-width: 280px;
+        
 
         p {
             margin: 0;
+            color: black;
         }
 
         p.name {
@@ -76,7 +79,7 @@ ul {
     top: 0px;
     position: relative;
     max-width: 262px;
-    background-color: #f2f8f9;
+    background-color: #e0e0e0;
     border-radius: 4px;
     padding: 32px 24px;
     margin: 12px;
@@ -99,7 +102,7 @@ ul {
       z-index: -1;
       top: -16px;
       right: -16px;
-      background: #00838d;
+      background: #da291c;
       height: 32px;
       width: 32px;
       border-radius: 32px;
