--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -5,7 +5,7 @@
 
 <header>
   <div class="navbar">
-    <a routerLink="/" class="logo">Ivanti MarketPlace</a>
+    <img routerLink="/" class="logo" src="https://tinyimg.io/i/rvpoMM4.png"  />
     <nav>
       <ul>
         <li><a href="#" routerLink="/"><b>Home</b></a></li>
