--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -6,14 +6,14 @@
   </div>
 </div>-->
 
-<!--<div class="container" style="margin-top:150px;margin-left:250px;position:absolute;">
+<div class="container" style="margin-top:150px;margin-left:250px;position:absolute;">
 
   <div class="col-md-6 col-md-offset-3">
 
     <div class="col-md-12">
       <div class="form-group" align="center">
         <label><b>Email</b></label>
-        <input type="text" class="form-control" name="email" placeholder="Email address" />[(ngModel)]="email.value"
+        <input type="text" class="form-control" name="email" placeholder="Email address" /><!--[(ngModel)]="email.value"-->
 
 
 
@@ -22,7 +22,7 @@
     <div class="col-md-12">
       <div class="form-group" align="center">
         <label><b>Password</b></label>
-        <input type="password" class="form-control" name="password" placeholder="Password"/> [(ngModel)]="password.value"
+        <input type="password" class="form-control" name="password" placeholder="Password"/> <!--[(ngModel)]="password.value"-->
 
 
 
@@ -33,7 +33,7 @@
       <div class="form-group" align="center">
         <div class="checkbox">
           <label>
-            <input type="checkbox" value=""> [(ngModel)]="rememberMe"
+            <input type="checkbox" value=""> <!--[(ngModel)]="rememberMe"-->
             Remember me
           </label>
         </div>
@@ -51,9 +51,9 @@
     </div>
 
   </div>
-</div>-->
+</div>
 
-<html>
+<!--<html>
 <head>
   <meta charset="utf-8">
   <title>Login to Celyes</title>
@@ -94,7 +94,7 @@
         </div>
       </form>
     </div>
-    <!-- Signup form -->
+
     <div class="col s12 m7 signup">
       <div class="signupForm">
         <h4 class="center">Sign up</h4>
@@ -146,10 +146,10 @@
   </div>
 </div>
 <div class="fixed-action-btn toolbar">
-  <!--<a class="btn-floating btn-large amber black-text">
+  <a class="btn-floating btn-large amber black-text">
     Login
-  </a>-->
+  </a>
 </div>
 </body>
-</html>
+</html>-->
 
