--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,25 @@
-<button (click)="getItems()">Api Call</button>
+<!-- <button (click)="getItems()">Api Call</button>
 <div *ngFor="let item of items | async">
   {{item | json}}
+</div> -->
+
+<header>
+  <div class="navbar">
+    <img routerLink="/" class="logo" src="https://tinyimg.io/i/rvpoMM4.png"  />
+    <nav>
+      <ul>
+        <li><a href="#" routerLink="/"><b>Home</b></a></li>
+        <li><a href="#" routerLink="/market">List</a></li>
+        <li><a href="#" routerLink="/register">Register</a></li>
+        <li><a href="#" routerLink="/login">Login</a></li>
+      </ul>
+    </nav>
+  </div>
+
+
+</header>
+
+<div class="container">
+  <router-outlet></router-outlet>
 </div>
+<app-footer></app-footer>
