--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -8,10 +8,15 @@
     <img routerLink="/" class="logo" src="https://tinyimg.io/i/rvpoMM4.png"  />
     <nav>
       <ul>
-        <li><a href="#" routerLink="/"><b>Home</b></a></li>
-        <li><a href="#" routerLink="/market">List</a></li>
-        <li><a href="#" routerLink="/register">Register</a></li>
-        <li><a href="#" routerLink="/login">Login</a></li>
+        <li><a href="#" routerLink="/"><b>{{'login' | translate}}</b></a></li>
+        <li><a href="#" routerLink="/market">{{'list' | translate}}</a></li>
+        <li><a href="#" routerLink="/register">{{'register' | translate}}</a></li>
+        <li><a href="#" routerLink="/login">{{'login' | translate}}</a></li>
+        <li>
+          <select [(ngModel)]="translationService.language">
+            <option *ngFor="let language of translationService.languages" [ngValue]="language">{{language}}</option>
+          </select>
+        </li>
       </ul>
     </nav>
   </div>
