--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -7,9 +7,11 @@
 </div>-->
 
 <div class="container" style="margin-top:150px;margin-left:250px;position:absolute;">
-
+ 
   <div class="col-md-6 col-md-offset-3">
-
+    <h1>
+      {{'login' | translate}}
+    </h1>
     <div class="col-md-12">
       <div class="form-group" align="center">
         <label><b>Email</b></label>
