--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -4,7 +4,9 @@
 
 $primary: rgb(0, 0, 0);
 
-html, body { height: 100%; }
+html, body { 
+    height: 100%; 
+}
 
 body { margin: 0; font-family: Oswald, "Oswald", sans-serif; }
 
@@ -12,6 +14,7 @@ body {
     margin: 0;
     font-family: 'Oswald', 'sans-serif';
     font-size: 18px;
+
 }
 
 .container {
@@ -56,3 +59,6 @@ h1 {
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
