--- a/client/src/app/market-place/market-place.component.html
+++ b/client/src/app/market-place/market-place.component.html
@@ -61,7 +61,7 @@
       <mat-option value="frontend">Frontend</mat-option>
     </mat-select>
   </mat-form-field>
-    <!-- <ul *ngIf="packages">
+    <ul *ngIf="packages">
       <li *ngFor="let package of packages">
         <a class="card2" href="#">
           <h2> {{package.title}} </h2>
@@ -69,5 +69,5 @@
           <p class="small">{{ package.description }}</p>
         </a>
       </li>
-    </ul> -->
+    </ul>
 </div>
