download-upload frontend working

--- a/client/src/app/register-component/register-component.component.html
+++ b/client/src/app/register-component/register-component.component.html
@@ -18,4 +18,4 @@
             <div id="downloadFileUrl"></div>
         </div>
     </div>
-    <script src="./download-upload.component.ts"></script>
+    <script src="./upload-download.component.ts"></script>
