--- a/client/src/app/market-place/market-place.component.html
+++ b/client/src/app/market-place/market-place.component.html
@@ -37,7 +37,7 @@
       <input type="text" class="form-control" (input)="showSearch($event.target.value)" placeholder="Search package...">
 <div class="containerPP">
   <ul *ngIf="packages">
-    <li *ngFor="let search of search">
+    <li *ngFor="let search of convertToJSON(search)">
       <a class="card2" href="#">
         <h2> {{search.title}} </h2>
         <h3>OS 30</h3>
@@ -51,15 +51,39 @@
 
 </div>
 
+    <mat-label>Categories</mat-label>
+      <mat-select name="selectCategory" #packageByCategory (selectionChange)="showPackageByCategory($event.value)">
+        <mat-option value="default">----</mat-option>
+        <ul *ngIf="packages">
+          <mat-option *ngFor="let category of convertToJSON(category)" [value]="category">
+            {{category}}
+            <!--<a class="card2" href="#">
+              <h2> {{package.title}} </h2>
+              <h3>OS 30</h3>
+              <p class="small">{{ package.description }}</p>
+            </a>-->
+          </mat-option>
+
+        </ul>
+      </mat-select>
+
+
+
 
   <mat-form-field appearance="fill">
     <mat-label>Categories</mat-label>
     <mat-select>
       <mat-option>None</mat-option>
-      <mat-option value="windows">Windows</mat-option>
+      <!--<mat-option value="windows">Windows</mat-option>
       <mat-option value="android">Android</mat-option>
       <mat-option value="frontend">Frontend</mat-option>
+      <ul *ngIf="packages">
+
+      </ul>-->
+      <mat-option *ngFor = "let category of convertToJSON(category)" [value]="category"></mat-option>
+      {{category}}
     </mat-select>
+
   </mat-form-field>
     <!-- <ul *ngIf="packages">
       <li *ngFor="let package of packages">
