--- a/client/src/app/home-page/home-page.component.html
+++ b/client/src/app/home-page/home-page.component.html
@@ -1,45 +1,5 @@
 <p>home-page works nicely!</p>
-<div class="container">
-
-    <form class="registerForm">
-        <div class="subForm">
-            <h2 >Info</h2>
-
-            <div class="controls half">
-                <label >Name*</label>
-                <input type="text"  name="First Name">
-            </div>
-
-            <div class="controls half">
-                <label >OS*</label>
-                <input type="text"  name="First Name">
-            </div>
-
-            <div class="controls full">
-                <label >Categories*</label>
-                <input type="text"  name="First Name">
-            </div>
-        </div>
-
-        <div class="subForm">
-            <h2 >Description*</h2>
-            <div class="controls full">
-                <label >Package Description</label>
-                <textarea > </textarea>
-            </div>
-            <div class="controls full">
-                <label >Instalation decripition*</label>
-                <textarea > </textarea>
-            </div>
-        </div>
-
-        <div>
-            <button>Create</button>
-        </div>
-
-    </form>
-
-</div>
+<h3>Loggedin user: {{currentUser | json }}</h3>
 
 
 <!--<app-footer></app-footer>-->
