--- a/client/src/app/market-place/market-place.component.scss
+++ b/client/src/app/market-place/market-place.component.scss
@@ -116,3 +116,91 @@ ul {
     }
   }
 
+
+  body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    background-color: #f7f8fc;
+    font-family: "Roboto", sans-serif;
+    color: #10182f;
+  }
+  .container {
+    display: flex;
+    width: 1040px;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+  }
+  .card {
+    margin: 10px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    width: 300px;
+    height: 400px;
+  }
+
+  .card-header {
+    display: flex;
+    flex-wrap: wrap;
+    align-items:flex-end;
+    justify-content: center;
+  }
+
+
+  .card-header img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+  }
+  .card-body {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 20px;
+    min-height: 200px;
+
+    .bottom {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      align-self: flex-end;
+    }
+
+    .button{
+      width: 70px;
+      height: 50px;
+      border: none;
+      outline: none;
+      background: #da291c;
+      color: #fff;
+      font-size: 22px;
+      border-radius: 40px;
+      text-align: center;
+      box-shadow: 0 6px 20px -5px rgba(0,0,0,0.4);
+      cursor: pointer;
+    }
+    
+  }
+  
+  .tag {
+    background: #cccccc;
+    border-radius: 50px;
+    font-size: 12px;
+    margin-bottom: 10px;
+    color: #fff;
+    padding: 2px 10px;
+    text-transform: uppercase;
+    cursor: pointer;
+    background-color: #da291c;
+  }
+  
+  .card-body p {
+    font-size: 13px;
+ 
+  }
+  
