--- a/client/src/app/footer/footer.component.html
+++ b/client/src/app/footer/footer.component.html
@@ -1,46 +1,1 @@
-<!-- Footer -->
-<footer id="footer" class="page-footer font-small special-color-dark pt-4">
-
-  <!-- Footer Elements -->
-  <div class="container">
-
-    <ul class="list-unstyled list-inline text-center"   >
-      <li class="list-inline-item">
-        <a mdbBtn floating="true" color="fb" class="mx-1" mdbWavesEffect href="https://https://www.facebook.com/GoIvanti/">
-          <mdb-icon fab icon="facebook" size="2x"></mdb-icon>
-        </a>
-      </li>
-      <li class="list-inline-item">
-        <a mdbBtn floating="true" color="tw" class="mx-1" mdbWavesEffect href="https://twitter.com/IvantiBenelux">
-          <mdb-icon fab icon="twitter" size="2x"></mdb-icon>
-        </a>
-      </li>
-      <li class="list-inline-item">
-        <a mdbBtn floating="true" color="instagram" class="mx-1" mdbWavesEffect href="https://twitter.com/IvantiBenelux">
-          <mdb-icon fab fab icon="instagram" size="2x"></mdb-icon>
-        </a>
-      </li>
-      <li class="list-inline-item">
-        <a mdbBtn floating="true" color="li" class="mx-1" mdbWavesEffect href="https://www.linkedin.com/company/ivanti/">
-          <mdb-icon fab icon="linkedin" size="2x"></mdb-icon>
-        </a>
-      </li>
-      <li class="list-inline-item">
-        <a mdbBtn floating="true" color="youtube" class="mx-1" mdbWavesEffect href="https://www.youtube.com/c/Ivanti">
-          <mdb-icon fab icon="youtube" size="2x"></mdb-icon>
-        </a>
-      </li>
-    </ul>
-
-  </div>
-  <!-- Footer Elements -->
-
-  <!-- Copyright -->
-  <div class="footer-copyright text-center py-3" >© 2022 Copyright:
-    <a href="https://ivanti.nl/"> Ivanti.nl</a>
-  </div>
-  <!-- Copyright -->
-
-</footer>
-<!-- Footer -->
-
+[ remove footer ]
