--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -8,7 +8,7 @@
     <img routerLink="/" class="logo" src="https://tinyimg.io/i/rvpoMM4.png"  />
     <nav>
       <ul>
-        <li><a href="#" routerLink="/"><b>{{'home' | translate}}</b></a></li>
+        <li><a href="#" routerLink="/"><b>{{'login' | translate}}</b></a></li>
         <li><a href="#" routerLink="/market">{{'list' | translate}}</a></li>
         <li><a href="#" routerLink="/register">{{'register' | translate}}</a></li>
         <li><a href="#" routerLink="/login">{{'login' | translate}}</a></li>
@@ -21,7 +21,7 @@
       </ul>
     </nav>
   </div>
-test = {{currentUser | json}}
+
 
 </header>
 
