--- a/client/src/app/profile-page/profile-page.component.html
+++ b/client/src/app/profile-page/profile-page.component.html
@@ -1,123 +1,124 @@
-<h1 class="heade">Market place</h1>
+<div class="profileHeader" allign="center">
+  <div class="profile">
+    <div class="image">
+      <div class="circle-1"></div>
+      <div class="circle-2"></div>
+      <img src="https://100dayscss.com/codepen/jessica-potter.jpg" width="70" height="70" alt="Jessica Potter">
+    </div>
 
-<div class="container" allign="center">
-  <div class="news">
-  <div class="text">
-    <p>News</p>
+    <div class="name">Jessica Potter</div>
+    <div class="job">Visual Artist</div>
+
+    <div class="actions">
+      <button class="btn">Edit profile</button>
+      <button class="btn">Message</button>
+    </div>
   </div>
+
+  <div class="stats">
+    <div class="box">
+      <span class="value">Info</span>
+      <span class="parameter">
+        Date of birth yesterday
+      </span>
+    </div>
+    <div class="box">
+      <span class="value">packages</span>
+      <span class="parameter">
+
+      </span>
+    </div>
+
   </div>
 </div>
 
-<h1>Uploaded packages</h1>
-<div>
-    <div class="gridRight">
-      <h1>Your packages</h1>
-      <br />
-        <div class="packagesContainer">
-          <h1>Your packages</h1>
-          <br /><hr />
-          <div class="container">
-            
-            <div class="card">
-              <div class="card-header">
-                <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple115/v4/4a/fa/e0/4afae0c6-9793-309d-ef98-fdee220b3e3f/source/512x512bb.jpg" alt="rover" />
-              </div>
-              <div class="card-body">
-                <p class="tag tag-red">Technology</p>
-                <p>
-                  An exploration into the truck's polarising design
-                  An exploration into the truck's polarising design
-                  An exploration into the truck's polarising design
-                </p>
-                <div class="bottom">
-                  <button class="button">Edit</button>
-                </div>
-              </div>
+<div class="ProfileContainer">
+  <div class="grifLeft">
+      <div class="sort">
+        <p>Want to register a new package, click here</p>
+        <br/>
+          <a routerLink="/createPackage" class="btn mb-2 mb-md-0 btn-secondary btn-block btn-round">Reigster</a>
+      </div>
+      <div class="eventInfo">
+        <h1>Packges </h1>
+          <p>
+          Why do we use it?It is a long established fact that a reader will be distracted by
+          the readable content of a page when looking at its layout. The point of using Lorem
+          Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' w
+          many web sites still in their infancy. Various versions have evolved over the years,
+          sometimes by accident, sometimes on purpose (injected humour and the like).
+          </p>
+      </div>
+  </div>
+
+  <div class="gridRight">
+      <div class="packagesContainer">
+
+        <div class="card">
+          <div class="card-header">
+            <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple115/v4/4a/fa/e0/4afae0c6-9793-309d-ef98-fdee220b3e3f/source/512x512bb.jpg" alt="rover" />
+          </div>
+          <div class="card-body">
+            <p class="tag tag-red">Technology</p>
+            <p>
+              An exploration into the truck's polarising design
+              An exploration into the truck's polarising design
+              An exploration into the truck's polarising design
+            </p>
+            <div class="bottom">
+              <button class="button">Edit</button>
             </div>
-            <div class="card">
-              <div class="card-header">
-                <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple115/v4/4a/fa/e0/4afae0c6-9793-309d-ef98-fdee220b3e3f/source/512x512bb.jpg" alt="rover" />
-              </div>
-              <div class="card-body">
-                <span class="tag tag-red">Technology</span>
-                <h4>
-                  Why is the Tesla Cybertruck designed the way it
-                  is?
-                </h4>
-                <p>
-                  An exploration into the truck's polarising design
-                </p>
-                <div class="bottom">
-                  <button class="button">Edit</button>
-                </div>
-              </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header">
+            <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple115/v4/4a/fa/e0/4afae0c6-9793-309d-ef98-fdee220b3e3f/source/512x512bb.jpg" alt="rover" />
+          </div>
+          <div class="card-body">
+            <span class="tag tag-red">Technology</span>
+            <p>
+              An exploration into the truck's polarising design
+              An exploration into the truck's polarising design
+              An exploration into the truck's polarising design
+            </p>
+            <div class="bottom">
+              <button class="button">Edit</button>
             </div>
-            <div class="card">
-              <div class="card-header">
-                <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple115/v4/4a/fa/e0/4afae0c6-9793-309d-ef98-fdee220b3e3f/source/512x512bb.jpg" alt="rover" />
-              </div>
-              <div class="card-body">
-                <span class="tag tag-red">Technology</span>
-                <h4>
-                  Why is the Tesla Cybertruck designed the way it
-                  is?
-                </h4>
-                <p>
-                  An exploration into the truck's polarising design
-                </p>
-                <div class="bottom">
-                  <button class="button">Edit</button>
-                </div>
-              </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header">
+            <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple115/v4/4a/fa/e0/4afae0c6-9793-309d-ef98-fdee220b3e3f/source/512x512bb.jpg" alt="rover" />
+          </div>
+          <div class="card-body">
+            <span class="tag tag-red">Technology</span>
+            <p>
+              An exploration into the truck's polarising design
+              An exploration into the truck's polarising design
+              An exploration into the truck's polarising design
+            </p>
+            <div class="bottom">
+              <button class="button">Edit</button>
             </div>
-            <div class="card">
-              <div class="card-header">
-                <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple115/v4/4a/fa/e0/4afae0c6-9793-309d-ef98-fdee220b3e3f/source/512x512bb.jpg" alt="rover" />
-              </div>
-              <div class="card-body">
-                <span class="tag tag-red">Technology</span>
-                <h4>
-                  Why is the Tesla Cybertruck designed the way it
-                  is?
-                </h4>
-                <p>
-                  An exploration into the truck's polarising design
-                </p>
-                <div class="bottom">
-                  <button class="button">Edit</button>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-header">
-                <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple115/v4/4a/fa/e0/4afae0c6-9793-309d-ef98-fdee220b3e3f/source/512x512bb.jpg" alt="rover" />
-              </div>
-              <div class="card-body">
-                <span class="tag tag-red">Technology</span>
-                <h4>
-                  Why is the Tesla Cybertruck designed the way it
-                  is?
-                </h4>
-                <p>
-                  An exploration into the truck's polarising design
-                </p>
-                <div class="bottom">
-                  <button class="button">Edit</button>
-                </div>
-              </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header">
+            <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple115/v4/4a/fa/e0/4afae0c6-9793-309d-ef98-fdee220b3e3f/source/512x512bb.jpg" alt="rover" />
+          </div>
+          <div class="card-body">
+            <span class="tag tag-red">Technology</span>
+            <p>
+              An exploration into the truck's polarising design
+              An exploration into the truck's polarising design
+              An exploration into the truck's polarising design
+            </p>
+            <div class="bottom">
+              <button class="button">Edit</button>
             </div>
           </div>
         </div>
 
-    </div>
-
-    <div class="gridLeft">
-       <div>
-
-       </div>
-
-       <div>
-
-       </div>
-    </div>
+      </div>
+  </div>
 </div>
