--- a/client/src/app/home-page/home-page.component.scss
+++ b/client/src/app/home-page/home-page.component.scss
@@ -9,19 +9,20 @@
 }
 
 .registerForm {
-    border: 1px solid rgb(145, 145, 145);
-    padding: 2em 8%; // blaze it!
-    width: 80%;
-    margin: 0 auto;
-    border-radius: 30px;
-    height: auto;
+  padding: 10px;
+  width: 500px ;
+  height: auto;
+  background: #f3f3f3;
+  border-radius: 20px;
+  box-shadow: 20px 20px rgba(0,0,0,.15);
+  transition: all .4s ease;
 
     button{
         cursor: pointer;
         background-color: blue;
         border: none;
         color: #fff;
-        padding: 12px 0;
+        padding: 20px;
         margin: 1em 0;
         width: 100%;
         &:hover{
@@ -63,11 +64,11 @@
       label {
         font-size: 18px;
         letter-spacing: 2px;
-     
+
 
       }
 
-      
+
 }
 
 .full {
