--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -4,8 +4,9 @@
 
 $primary: rgb(0, 0, 0);
 
-html, body { 
-    height: 100%; 
+html, body {
+    height: 100%;
+    align-items: center;
 }
 
 body { margin: 0; font-family: Oswald, "Oswald", sans-serif; }
@@ -14,7 +15,6 @@ body {
     margin: 0;
     font-family: 'Oswald', 'sans-serif';
     font-size: 18px;
-
 }
 
 .container {
@@ -59,6 +59,9 @@ h1 {
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
