--- a/client/src/app/register-component/register-component.component.html
+++ b/client/src/app/register-component/register-component.component.html
@@ -35,7 +35,7 @@
                 <div class="rightGrid">
                     <div>
                         <div class="controls full">
-                            <label >Instalation decripition*</label>
+                            <label >Installation description*</label>
                             <textarea > </textarea>
                         </div>
                         <div class="file-upload">
