--- a/client/src/app/profile-page/profile-page.component.html
+++ b/client/src/app/profile-page/profile-page.component.html
@@ -23,7 +23,7 @@
       </span>
     </div>
     <div class="box">
-      <span class="value">packages</span>
+      <span class="value">Packages</span>
       <span class="parameter">
 
       </span>
@@ -37,10 +37,10 @@
       <div class="sort">
         <p>Want to register a new package, click here</p>
         <br/>
-          <a routerLink="/createPackage" class="btn mb-2 mb-md-0 btn-secondary btn-block btn-round">Reigster</a>
+          <a routerLink="/createPackage" class="btn mb-2 mb-md-0 btn-secondary btn-block btn-round">Register</a>
       </div>
       <div class="eventInfo">
-        <h1>Packges </h1>
+        <h1>Packages </h1>
           <p>
           Why do we use it?It is a long established fact that a reader will be distracted by
           the readable content of a page when looking at its layout. The point of using Lorem
