--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -26,6 +26,8 @@
 </header>
 
 <div class="pageContainer">
-  <router-outlet></router-outlet>
+  <div class="centerContent">
+    <router-outlet></router-outlet>
+  </div>
 </div>
 <app-footer></app-footer>
