--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -2,5 +2,13 @@ body {
     justify-content: center;
 }
 .pageContainer {
-    width: 90%;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.centerContent {
+    width: 85%;
 }
