--- a/client/src/app/profile-page/profile-page.component.scss
+++ b/client/src/app/profile-page/profile-page.component.scss
@@ -11,109 +11,59 @@
 
   $brown: #786450;
 
-  .profile {
-    float: left;
-    width: 500px;
-    height: 320px;
-    text-align: center;
-    background-color: #f3f3f3;
+  body{
+    margin-top:20px;
+    color: #1a202c;
+    text-align: left;
+    background-color: #e2e8f0;
+}
+.main-body {
+    padding: 15px;
+}
+.card {
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
+}
 
-    .image {
-      position: relative;
-      width: 70px;
-      height: 70px;
-      margin: 38px auto 0 auto;
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 0 solid rgba(0,0,0,.125);
+    border-radius: .25rem;
+}
 
-      .circle-1 {
-        position: absolute;
-        box-sizing: border-box;
-        width: 76px;
-        height: 76px;
-        top: -3px;
-        left: -3px;
-        border-width: 1px;
-        border-style: solid;
-        border-color: $brown $brown $brown transparent;
-        border-radius: 50%;
-        transition: all 1.5s ease-in-out;
-      }
+.card-body {
+    flex: 1 1 auto;
+    min-height: 1px;
+    padding: 1rem;
+}
 
-      img {
-        display: block;
-        border-radius: 50%;
-        background: #F5E8DF;
-      }
+.gutters-sm {
+    margin-right: -8px;
+    margin-left: -8px;
+}
 
-    }
+.gutters-sm>.col, .gutters-sm>[class*=col-] {
+    padding-right: 8px;
+    padding-left: 8px;
+}
+.mb-3, .my-3 {
+    margin-bottom: 1rem!important;
+}
 
-    .name {
-      font-size: 15px;
-      font-weight: 600;
-      margin-top: 20px;
-    }
-
-    .job {
-      font-size: 11px;
-      line-height: 15px;
-    }
-
-    .actions {
-      margin-top: 33px;
-
-      .btn {
-        display: block;
-        width: 120px;
-        height: 30px;
-        margin: 0 auto 10px auto;
-        background: none;
-        border: 1px solid $brown;
-        border-radius: 15px;
-        font-size: 12px;
-        font-weight: 600;
-        box-sizing: border-box;
-        transition: all .3s ease-in-out;
-        color: $brown;
-
-        &:hover {
-          background: $brown;
-          color: #fff;
-        }
-      }
-    }
-
-  }
-
-  .stats {
-    float: left;
-    height: 100%;
-
-    .box {
-      box-sizing: border-box;
-      width: 400px;
-      height: 160px;
-      background: #f3f3f3;
-      text-align: center;
-      padding-top: 28px;
-      transition: all .4s ease-in-out;
-      margin: 5px;
-
-
-    }
-
-    span {
-      display: block;
-    }
-
-    .value {
-      font-size: 18px;
-      font-weight: 600;
-    }
-
-    .parameter {
-      font-size: 11px;
-    }
-
-  }
+.bg-gray-300 {
+    background-color: #e2e8f0;
+}
+.h-100 {
+    height: 100%!important;
+}
+.shadow-none {
+    box-shadow: none!important;
+}
 
 
 }
@@ -215,6 +165,91 @@
         border-top: 3px double #ebeaea;
     }
 
+    * {
+      box-sizing: border-box;
+    }
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 0;
+      background-color: #f7f8fc;
+      font-family: "Roboto", sans-serif;
+      color: #10182f;
+    }
+
+    .card {
+      margin: 10px;
+      background-color: #fff;
+      border-radius: 10px;
+      box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+      overflow: hidden;
+      width: 300px;
+      height: 340px;
+    }
+
+    .card-header {
+      display: flex;
+      flex-wrap: wrap;
+      align-items:flex-end;
+      justify-content: center;
+    }
+
+
+    .card-header img {
+      width: 100px;
+      height: 100px;
+      object-fit: cover;
+    }
+    .card-body {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      padding: 20px;
+      min-height: 200px;
+
+      .bottom {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        align-self: flex-end;
+      }
+
+      .button{
+        width: 70px;
+        height: 50px;
+        border: none;
+        outline: none;
+        background: #da291c;
+        color: #fff;
+        font-size: 22px;
+        border-radius: 40px;
+        text-align: center;
+        box-shadow: 0 6px 20px -5px rgba(0,0,0,0.4);
+        cursor: pointer;
+      }
+
+    }
+
+    .tag {
+      background: #cccccc;
+      border-radius: 50px;
+      font-size: 12px;
+      margin-bottom: 10px;
+      color: #fff;
+      padding: 2px 10px;
+      text-transform: uppercase;
+      cursor: pointer;
+      background-color: #da291c;
+    }
+
+    .card-body p {
+      font-size: 13px;
+
+    }
+
 
   }
   .packageList {
@@ -226,90 +261,7 @@
   }
 
 
-  * {
-    box-sizing: border-box;
-  }
-  body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-    background-color: #f7f8fc;
-    font-family: "Roboto", sans-serif;
-    color: #10182f;
-  }
 
-  .card {
-    margin: 10px;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
-    overflow: hidden;
-    width: 300px;
-    height: 340px;
-  }
-
-  .card-header {
-    display: flex;
-    flex-wrap: wrap;
-    align-items:flex-end;
-    justify-content: center;
-  }
-
-
-  .card-header img {
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-  }
-  .card-body {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 20px;
-    min-height: 200px;
-
-    .bottom {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      align-self: flex-end;
-    }
-
-    .button{
-      width: 70px;
-      height: 50px;
-      border: none;
-      outline: none;
-      background: #da291c;
-      color: #fff;
-      font-size: 22px;
-      border-radius: 40px;
-      text-align: center;
-      box-shadow: 0 6px 20px -5px rgba(0,0,0,0.4);
-      cursor: pointer;
-    }
-
-  }
-
-  .tag {
-    background: #cccccc;
-    border-radius: 50px;
-    font-size: 12px;
-    margin-bottom: 10px;
-    color: #fff;
-    padding: 2px 10px;
-    text-transform: uppercase;
-    cursor: pointer;
-    background-color: #da291c;
-  }
-
-  .card-body p {
-    font-size: 13px;
-
-  }
 
 
 
