Registeration form updated

--- a/client/src/app/login/login.component.css
+++ b/client/src/app/login/login.component.css
@@ -14,3 +14,11 @@
     justify-content: center;
 }
 
+/*.signinContainer{
+  display: flex;
+  flex-wrap: wrap;
+  align-items:flex-end;
+  justify-content: center;
+
+}*/
+
