--- a/client/src/app/register-component/register-component.component.html
+++ b/client/src/app/register-component/register-component.component.html
@@ -12,17 +12,17 @@
                 <div class="leftGrid">
                     <div class="controls half">
                         <label >Name*</label>
-                        <input id="name" type="text"  name="First Name" required>
+                        <input id="name" type="text"  name="Name" required>
                     </div>
 
                     <div class="controls half">
                         <label >OS*</label>
-                        <input id="OS" type="text"  name="First Name" required>
+                        <input id="OS" type="text"  name="OS" required>
                     </div>
 
                     <div class="controls full">
                         <label >Categories*</label>
-                        <input id="categories" type="text"  name="First Name" required>
+                        <input id="categories" type="text"  name="category" required>
                     </div>
 
                     <div class="controls full">
