--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -6,6 +6,8 @@
   </div>
 </div>-->
 
+<div class="signinContainer">
+
 <div class="container" style="margin-top:150px;margin-left:250px;position:absolute;">
 
   <div class="col-md-6 col-md-offset-3">
@@ -55,7 +57,7 @@
 
   </div>
 </div>
-
+</div>
 <!--<html>
 <head>
   <meta charset="utf-8">
