--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -7,7 +7,7 @@
   <div>
   </div>
 </div>
-
+<!--
 <div class="container" style="margin-top:50px;margin-left:300px">
 
   <div class="col-md-6 col-md-offset-3">
@@ -17,11 +17,11 @@
         <label><b>Role</b></label>
         <div class="radio">
           <label>
-            <input type="radio" name="genre" value="contentcreator" ><!--[(ngModel)]="role"-->
+            <input type="radio" name="genre" value="contentcreator" >
             Content Creator
           </label>
           <label style="margin-left:20px">
-            <input type="radio" name="genre" value="user" ><!--[(ngModel)]="role"-->
+            <input type="radio" name="genre" value="user" >
             User
           </label>
         </div>
@@ -31,46 +31,36 @@
     <div class="col-md-6">
       <div class="form-group">
         <label><b>First Name</b></label>
-        <input type="text" class="form-control" name="firstname" placeholder="First name" /><!--[(ngModel)]="firstname.value"-->
-        <!--<div [hidden]="!firstname.errors.required">
+        <input type="text" class="form-control" name="firstname" placeholder="First name" />
 
-        </div>-->
       </div>
     </div>
     <div class="col-md-6">
       <div class="form-group">
         <label ><b>Last Name</b></label>
-        <input type="text" class="form-control" name="lastname" placeholder="Last name" /><!--[(ngModel)]="lastname.value"-->
-        <!--<div [hidden]="!lastname.errors.required">
+        <input type="text" class="form-control" name="lastname" placeholder="Last name" />
 
-        </div>-->
       </div>
     </div>
     <div class="col-md-12">
       <div class="form-group">
         <label ><b>Email</b></label>
-        <input type="text" class="form-control" name="email" placeholder="Email" /><!--[(ngModel)]="email.value"-->
-        <!--<div [hidden]="!email.errors.required">
+        <input type="text" class="form-control" name="email" placeholder="Email" />
 
-        </div>-->
       </div>
     </div>
     <div class="col-md-12">
       <div class="form-group">
         <label ><b>Password</b></label>
-        <input type="password" class="form-control" name="password" placeholder="Password" /><!--[(ngModel)]="password.value"-->
-        <!--<div [hidden]="!password.errors.required">
+        <input type="password" class="form-control" name="password" placeholder="Password" />
 
-        </div>-->
       </div>
     </div>
     <div class="col-md-12">
       <div class="form-group">
         <label ><b>Confirm Password</b></label>
-        <input type="password" class="form-control" name="confirmpassword" placeholder="Confirm password" /><!--[(ngModel)]="confirmpassword.value"-->
-        <!--<div [hidden]="!confirmpassword.errors.required">
+        <input type="password" class="form-control" name="confirmpassword" placeholder="Confirm password" />
 
-        </div>-->
       </div>
     </div>
 
@@ -91,5 +81,72 @@
     </div>
   </div>
 </div>
+-->
 
-<!--<app-footer></app-footer>-->
+<!-- Default form register -->
+
+<div class="signupContainer">
+
+
+<div class = "registration">
+
+<form class="text-center border border-light p-5">
+
+  <p class="h4 mb-4">Sign up</p>
+
+  <div class="form-row mb-4">
+    <div class="col">
+      <!-- First name -->
+      <input type="text" id="defaultRegisterFormFirstName" class="form-control" placeholder="First name">
+    </div>
+    <div class="col">
+      <!-- Last name -->
+      <input type="text" id="defaultRegisterFormLastName" class="form-control" placeholder="Last name">
+    </div>
+  </div>
+
+  <!-- E-mail -->
+  <input type="email" id="defaultRegisterFormEmail" class="form-control mb-4" placeholder="E-mail">
+
+  <!-- Password -->
+  <input type="password" id="defaultRegisterFormPassword" class="form-control" placeholder="Password" aria-describedby="defaultRegisterFormPasswordHelpBlock">
+  <small id="defaultRegisterFormPasswordHelpBlock" class="form-text text-muted mb-4">
+  </small>
+
+  <!-- Confirm Password -->
+  <input type="password" id="defaultRegisterFormConfirmPassword" class="form-control" placeholder="Confirm Password" aria-describedby="defaultRegisterFormConfirmPasswordHelpBlock">
+  <small id="defaultRegisterFormConfirmPasswordHelpBlock" class="form-text text-muted mb-4">
+  </small>
+
+  <!-- Phone number -->
+  <input type="text" id="defaultRegisterPhonePassword" class="form-control" placeholder="Phone number" aria-describedby="defaultRegisterFormPhoneHelpBlock">
+  <small id="defaultRegisterFormPhoneHelpBlock" class="form-text text-muted mb-4">
+
+  </small>
+
+  <select class="browser-default custom-select">
+    <option selected>Select Role</option>
+    <option value="1">Content Creator</option>
+    <option value="2">User</option>
+  </select>
+  <small id="space" class="form-text text-muted mb-4">
+
+  </small>
+
+  <!-- Sign up button -->
+  <button mdbBtn color="info" block="true" class="my-4" type="submit">Sign up</button>
+
+
+  <hr>
+
+  <!-- Terms of service -->
+  <p>By clicking
+    <em>Sign up</em> you agree to our
+    <a href="" target="_blank">terms of service</a></p>
+
+</form>
+
+</div>
+
+</div>
+<!-- Default form register -->
