Sort button and search bar optimized

--- a/client/src/app/profile-page/profile-page.component.html
+++ b/client/src/app/profile-page/profile-page.component.html
@@ -123,7 +123,7 @@
       <div class="sort">
         <p>Want to register a new package, click here</p>
         <br/>
-          <a routerLink="/createPackage" class="btn mb-2 mb-md-0 btn-secondary btn-block btn-round">Reigster</a>
+          <a routerLink="/createPackage" class="btn mb-2 mb-md-0 btn-secondary btn-block btn-round">Register</a>
       </div>
       <div class="eventInfo">
         <h1>Packges </h1>
