--- a/client/src/app/market-place/market-place.component.html
+++ b/client/src/app/market-place/market-place.component.html
@@ -33,8 +33,37 @@
         <p class="small">Card description with lots of great facts and interesting details.</p>
       </a>
       </div>
-      <input type="text" class="form-control" (input)="showSearch($event.target.value)" placeholder="Search package...">
+      <!--input type="text" class="form-control" (input)="showSearch($event.target.value)" placeholder="Search package..."-->
+
+  <div class="search-box">
+    <input type="text" class="search-input" (input)="showSearch($event.target.value)" placeholder="Search package...">
+    <a class="search-btn" href="#">
+      <i class="fas fa-search"></i>
+    </a>
+  </div>
+
+
 <div class="containerPP">
+
+  <mat-form-field appearance="fill">
+    <mat-label>Categories</mat-label>
+    <mat-select [formControl]="categories" multiple name="selectCategory" #packageByCategory (selectionChange)="showPackageByCategory($event.value)">
+      <mat-select-trigger>
+        {{categories.value ? categories.value[0] : ''}}
+        <span *ngIf="categories.value?.length > 1" style="opacity: 0.75;font-size: 0.75em;">
+          (+{{categories.value.length - 1}} {{categories.value?.length === 2 ? 'other' : 'others'}})
+        </span>
+      </mat-select-trigger>
+      <mat-option *ngFor="let category of convertToJSON(category)" [value]="category">{{category}}</mat-option>
+    </mat-select>
+  </mat-form-field>&nbsp;&nbsp;&nbsp;
+
+  <!--button (click)="sortClick()">Sort</button-->
+  <!--button className="bn632-hover bn28" (click)="sortClick()">Sort</button-->
+  <button class="button-78" role="button" (click)="sortClick()">Sort</button>
+
+
+
   <ul *ngIf="packages">
     <li *ngFor="let search of convertToJSON(search)">
       <a class="card2" href="#">
@@ -44,7 +73,7 @@
       </a>
     </li>
   </ul>
-  <button (click)="sortClick()">Sort</button>
+
 </div>
 
 
@@ -54,18 +83,7 @@
 
 
 
-    <mat-form-field appearance="fill">
-      <mat-label>Categories</mat-label>
-      <mat-select [formControl]="categories" multiple name="selectCategory" #packageByCategory (selectionChange)="showPackageByCategory($event.value)">
-        <mat-select-trigger>
-          {{categories.value ? categories.value[0] : ''}}
-          <span *ngIf="categories.value?.length > 1" style="opacity: 0.75;font-size: 0.75em;">
-          (+{{categories.value.length - 1}} {{categories.value?.length === 2 ? 'other' : 'others'}})
-        </span>
-        </mat-select-trigger>
-        <mat-option *ngFor="let category of convertToJSON(category)" [value]="category">{{category}}</mat-option>
-      </mat-select>
-    </mat-form-field>
+
 
 
 
