--- a/client/src/app/market-place/market-place.component.scss
+++ b/client/src/app/market-place/market-place.component.scss
@@ -15,8 +15,8 @@
     margin-bottom: 20px;
 
     .news {
- 
-        
+
+
 
         .text {
             text-align: center;
@@ -55,7 +55,7 @@ ul {
         display: flex;
         flex-direction: column;
         min-width: 280px;
-        
+
 
         p {
             margin: 0;
@@ -87,7 +87,7 @@ ul {
     z-index: 0;
     overflow: hidden;
     border: 1px solid #f2f8f9;
-  
+
     &:hover {
       transition: all 0.2s ease-out;
       box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
@@ -95,7 +95,7 @@ ul {
       border: 1px solid #cccccc;
       background-color: white;
     }
-  
+
     &:before {
       content: "";
       position: absolute;
@@ -110,7 +110,7 @@ ul {
       transform-origin: 50% 50%;
       transition: transform 0.15s ease-out;
     }
-  
+
     &:hover:before {
       transform: scale(2.15);
     }
@@ -184,9 +184,9 @@ ul {
       box-shadow: 0 6px 20px -5px rgba(0,0,0,0.4);
       cursor: pointer;
     }
-    
+
   }
-  
+
   .tag {
     background: #cccccc;
     border-radius: 50px;
@@ -198,9 +198,221 @@ ul {
     cursor: pointer;
     background-color: #da291c;
   }
-  
+
   .card-body p {
     font-size: 13px;
- 
+
   }
-  
+
+  /* div */
+  .search-box {
+    position: absolute;
+    //top: 50%;
+    left: 82%;
+    transform: translate(-50%, -50%);
+    background: #cd595a;
+    height: 60px;
+    border-radius: 50px;
+    padding: 10px;
+  }
+
+  /* input */
+  .search-input {
+    outline: none;
+    border: none;
+    background: none;
+    width: 0;
+    padding: 0;
+    color: #fff;
+    float: left;
+    font-size: 16px;
+    transition: .3s;
+    line-height: 40px;
+  }
+
+  .search-input::placeholder {
+    color: #dbc5b0;
+  }
+
+  /* icon */
+  .search-btn {
+    color: #fff;
+    float: right;
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+    background: #cd595a;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    transition: .3s;
+  }
+
+  .search-input:focus,
+  .search-input:not(:placeholder-shown) {
+    width: 240px;
+    padding: 0 6px;
+  }
+
+  .search-box:hover > .search-input {
+    width: 240px;
+    padding: 0 6px;
+  }
+
+  .search-box:hover > .search-btn,
+  .search-input:focus + .search-btn,
+  .search-input:not(:placeholder-shown) + .search-btn {
+    background: #fff;
+    color: #cd595a;
+  }
+
+  .bn632-hover {
+    width: 160px;
+    font-size: 16px;
+    font-weight: 600;
+    color: #fff;
+    cursor: pointer;
+    margin: 20px;
+    height: 55px;
+    text-align:center;
+    border: none;
+    background-size: 300% 100%;
+    border-radius: 50px;
+    moz-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+  }
+
+  .bn632-hover:hover {
+    background-position: 100% 0;
+    moz-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+  }
+
+  .bn632-hover:focus {
+    outline: none;
+  }
+
+  .bn632-hover.bn28 {
+      background-image: linear-gradient(
+        to right,
+        #eb3941,
+        #f15e64,
+        #e14e53,
+        #e2373f
+      );
+      box-shadow: 0 5px 15px rgba(242, 97, 103, 0.4);
+    }
+.button-78 {
+  align-items: center;
+  appearance: none;
+  background-clip: padding-box;
+  background-color: initial;
+  background-image: none;
+  border-style: none;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  flex-direction: row;
+  flex-shrink: 0;
+  font-family: Eina01,sans-serif;
+  font-size: 16px;
+  font-weight: 800;
+  justify-content: center;
+  line-height: 24px;
+  margin: 0;
+  min-height: 64px;
+  outline: none;
+  overflow: visible;
+  padding: 19px 26px;
+  pointer-events: auto;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  text-transform: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  width: auto;
+  word-break: keep-all;
+  z-index: 0;
+  }
+
+  @media (min-width: 768px) {
+  .button-78 {
+  padding: 19px 32px;
+  }
+  }
+
+  .button-78:before,
+  .button-78:after {
+  border-radius: 80px;
+  }
+
+  .button-78:before {
+  background-image: linear-gradient(92.83deg, #ff7426 0, #f93a13 100%);
+  content: "";
+  display: block;
+  height: 100%;
+  left: 0;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: -2;
+  }
+
+  .button-78:after {
+  background-color: initial;
+  background-image: linear-gradient(#541a0f 0, #0c0d0d 100%);
+  bottom: 4px;
+  content: "";
+  display: block;
+  left: 4px;
+  overflow: hidden;
+  position: absolute;
+  right: 4px;
+  top: 4px;
+  transition: all 100ms ease-out;
+  z-index: -1;
+  }
+
+  .button-78:hover:not(:disabled):before {
+  background: linear-gradient(92.83deg, rgb(255, 116, 38) 0%, rgb(249, 58, 19) 100%);
+  }
+
+  .button-78:hover:not(:disabled):after {
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+  transition-timing-function: ease-in;
+  opacity: 0;
+  }
+
+  .button-78:active:not(:disabled) {
+  color: #ccc;
+  }
+
+  .button-78:active:not(:disabled):before {
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, .2), rgba(0, 0, 0, .2)), linear-gradient(92.83deg, #ff7426 0, #f93a13 100%);
+  }
+
+  .button-78:active:not(:disabled):after {
+  background-image: linear-gradient(#541a0f 0, #0c0d0d 100%);
+  bottom: 4px;
+  left: 4px;
+  right: 4px;
+  top: 4px;
+  }
+
+  .button-78:disabled {
+  cursor: default;
+  opacity: .24;
+  }
